# Agent-OS-Kernel

./: .gitignore  3DAY_PLAN.md  CHANGELOG.md  Cargo.toml  Dockerfile  FOLDER_STRUCTURE.md  Makefile  PROGRESS.md  PROGRESS_RUST.md  PROGRESS_STATUS.txt  README.md  README_EN.md  async-trait.crate  continuous_progress.sh  docker-compose.yml  progress_check.sh  progress_monitor.py  progress_monitor.sh  pyproject.toml  requirements-dev.txt  requirements.txt  suagent.py  suagent_cron.sh  suagent_report.txt
agent_os_kernel/: __init__.py  __main__.py  kernel.py
crypto-monitor/: index.html
docs/: API.md  API_REFERENCE.md  PYTHON_BINDING_RESEARCH.md  api-guide.md  api-reference.md  architecture.md  architecture.zh.md  best-practices.md  changelog.md  comparison.md  configuration.md  deployment.md  distributed-deployment.md  local-models.md  memory-enhancement.md  monitoring.md  security.md  task-queue.md
examples/: README.md  agent_registry_demo.py  async_queue_demo.py  benchmark.py  cache_demo.py  comprehensive_demo.py  comprehensive_system_demo.py  config_manager_demo.py  cost_tracker_demo.py  lock_manager_demo.py  metrics_demo.py  new_providers_demo.py  pipeline_demo.py  plugin_system_demo.py  security_demo.py  storage_demo.py
gold-monitor/: package-lock.json  package.json  server.js
log-analyzer/: log_analyzer.py
memory/: 2026-02-07.md  2026-02-10.md  2026-02-11.md
openclaw-monitor/: README.md  app.py  config.yaml  openclaw-monitor.service
scripts/: kernel-cli
server-monitor/: app.py  requirements.txt
src/: lib.rs  python.rs
static/: dashboard.html
stock-monitor/: README.md  config.js  index.js  package.json
tests/: test_advanced_features.py  test_agent_definition.py  test_agent_pool.py  test_agent_pool_enhanced.py  test_agent_registry.py  test_async_queue.py  test_cache_system.py  test_checkpointer.py  test_circuit_breaker.py  test_communication.py  test_config_manager.py  test_context_manager.py  test_core.py  test_cost_tracker.py  test_distributed.py  test_enhanced_modules.py  test_integration.py  test_kernel.py  test_llm_provider.py  (+23 more)
(+168 files in other folders)
